[workspace]
members = [
    "rustorch-core",
    "rustorch-nn",
    "rustorch-vision", "rustorch-text", "rustorch-wasm",
    # "rustorch-cuda", # Requires CUDA Toolkit
    # "rustorch-metal", # Requires macOS
    # "rustorch-vision",
    # "rustorch-text",
    # "rustorch-cuda",
    # "rustorch-metal",
    # "rustorch-wasm",
]
resolver = "2"
