[package]
name = "rus-torch"
version = "0.1.0"
edition = "2021"
authors = ["Trae AI <trae@example.com>"]
description = "A comprehensive deep learning framework in Rust, merging core, nn, vision, text, and wasm"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Genius-apple/RusTorch"
keywords = ["deep-learning", "machine-learning", "neural-network", "computer-vision", "nlp"]
categories = ["science", "computer-vision", "text-processing", "wasm"]

[dependencies]
rustorch-core = { path = "../rustorch-core", version = "0.1.0" }
rustorch-nn = { path = "../rustorch-nn", version = "0.1.0" }
rustorch-vision = { path = "../rustorch-vision", version = "0.1.0", optional = true }
rustorch-text = { path = "../rustorch-text", version = "0.1.0", optional = true }
rustorch-wasm = { path = "../rustorch-wasm", version = "0.1.0", optional = true }

[features]
default = ["vision", "text"]
vision = ["dep:rustorch-vision"]
text = ["dep:rustorch-text"]
wasm = ["dep:rustorch-wasm"]
