[package]
name = "rustorch-core"
version = "0.1.0"
edition = "2021"
authors = ["Trae AI <trae@example.com>"]
description = "Core tensor library for RusTorch"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
thiserror = "1.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"], optional = true }
# cudarc = { version = "0.9", optional = true, default-features = false }

[features]
default = []
serialization = ["serde"]
cuda = [] # Placeholder
serde = ["dep:serde"]
