[package]
name = "rustorch-nn"
version = "0.1.1"
edition = "2021"
authors = ["Trae AI <trae@example.com>"]
description = "Neural network modules for RusTorch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Genius-apple/RusTorch"
keywords = ["neural-network", "deep-learning", "layer", "module", "ai"]
categories = ["science", "computer-vision"]

[dependencies]
rustorch-core = { path = "../rustorch-core", version = "0.1.1" }
rand = "0.8"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "rustorch-core/serde"]
