[package]
name = "rustorch-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Trae AI <trae@example.com>"]
description = "WebAssembly bindings for RusTorch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Genius-apple/RusTorch"
keywords = ["wasm", "webassembly", "deep-learning", "rustorch"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustorch-core = { path = "../rustorch-core", version = "0.1.0" }
rustorch-nn = { path = "../rustorch-nn", version = "0.1.0" }
wasm-bindgen = "0.2"
